fix social logo height issue on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ a.logo {
 
 a.logo img {
 	max-width: 90%;
-	height: 90%;
+	height: auto;
 	padding: 5%;
 }
 
